# setwise

./: .codecov.yml  .gitignore  ENHANCED_FEATURES.md  FORMATS.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  QUALITY_IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_FIXES.md  SPECIFICATION.md  USABILITY_IMPROVEMENT_PLAN.md  USER_TESTING.md  _config.yml  _quarto.yml  artifact.tar  debug_webapp_issue.py  enhanced_questions_example.py  example_quiz.tex  examples.qmd  features.qmd  generate_template_previews.py  index.md  index.qmd  installation.qmd  main.py  packages.txt  physics_questions.yaml  pyproject.toml  pytest.ini  quickstart.qmd  requirements.txt  setwise_quiz_example.tex  setwise_web.py  simple_app.py  simple_test.py  streamlit_app.py  styles.css  templated-questions.qmd  test_all.py  (+8 more)
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml
.setwise-preview/: answer_key_1.txt  quiz_set_1.tex
data/: questions.py
demos/: README.md  demo1_quickstart.sh  demo2_formats.sh  demo3_validation.sh  demo4_templates.sh  record_all.sh
docs/: FORMATS.md  INSTALLATION.md  QUALITY.md  TEMPLATES.md  USER_GUIDE.md  architecture.md  index.md
examples/: advanced_features.py  chemistry_questions.py  computer_science_questions.py  mathematics_questions.py  physics_questions.py  sample_questions.csv  sample_questions.json  sample_questions.md  sample_questions.yaml  ultimate_demo.py
figures/: decision_tree.tikz  neural_network.tikz  svm_margin.tikz
final_demo/: answer_key_1.txt  quiz_set_1.tex
scripts/: README.md  security_test.sh
setwise/: __init__.py  cli.py  figure_generator.py  formats.py  latex_validator.py  question_manager.py  quiz_generator.py  template_manager.py  user_guidance.py
setwise/data/: __init__.py  questions.py
setwise/templates/: quiz_template.tex.jinja  quiz_template_minimal.tex.jinja  template_config.py
templates/: quiz_template.tex.jinja  quiz_template_academic.tex.jinja  quiz_template_compact.tex.jinja  quiz_template_minimal.tex.jinja
test_formats/: sample_questions.csv  sample_questions.json  sample_questions.md  sample_questions.py  sample_questions.yaml
test_reproducibility/: answer_key_1.txt  quiz_set_1.tex
test_yaml_output/: answer_key_1.txt  quiz_set_1.tex
tests/: __init__.py  test_core.py  test_error_handling.py  test_question_manager.py  test_quiz_generator.py  test_template_manager.py
vscode-extension/: README.md  install.sh  package.json
