[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setwise"
version = "1.0.0"
description = "Professional LaTeX Quiz Generator for Machine Learning Content"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nipun Batra", email = "nipunbatra0@gmail.com"}
]
maintainers = [
    {name = "Nipun Batra", email = "nipunbatra0@gmail.com"}
]
keywords = [
    "quiz", "latex", "education", "machine-learning", 
    "assessment", "randomization", "pdf-generation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0"
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "streamlit>=1.28.0"
]
security = [
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pip-audit>=2.0.0"
]

[project.urls]
Homepage = "https://nipunbatra.github.io/setwise"
Repository = "https://github.com/nipunbatra/setwise"
Documentation = "https://nipunbatra.github.io/setwise"
Issues = "https://github.com/nipunbatra/setwise/issues"
Changelog = "https://github.com/nipunbatra/setwise/releases"

[project.scripts]
setwise = "setwise.cli:main"

[tool.setuptools.packages.find]
include = ["setwise*"]

[tool.setuptools.package-data]
setwise = ["data/*.py", "templates/*.tex.jinja"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["setwise"]
omit = ["tests/*", "setwise/data/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true